--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -249,6 +249,10 @@
     font-size: 11.5px;
     line-height: 1.16;
 
+    @include desktop {
+        font-size: 13px
+        line-height: 1.71;
+    }
 
 
 }
