--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -225,11 +225,6 @@
         overflow: auto;
     }
 
-    &.is-hidden {
-        opacity: 0;
-        pointer-events: none;
-    
-    }
 
     @include tablet {
         display: none;
@@ -310,8 +305,8 @@
         }
 }
 
-// .is-hidden{
-//             opacity: 0;
-//             pointer-events: none;
-    
-//         }
+ .is-hidden {
+     opacity: 0;
+     pointer-events: none;
+
+ }
