--- a/css/main.css
+++ b/css/main.css
@@ -78,8 +78,18 @@ body {
 .container {
   padding: 0 15px;
   margin: 0 auto;
-  width: 1200px;
+  width: 480px;
   max-width: 100%;
+}
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 1200px;
+  }
 }
 
 .logo {
@@ -186,7 +196,6 @@ body {
 @media screen and (min-width: 768px) {
   .subscribe__input {
     max-width: 450px;
-    margin-bottom: 20px;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -204,12 +213,13 @@ body {
 }
 @media screen and (min-width: 768px) {
   .subscribe__button {
-    margin-top: 0px;
+    margin-top: 10px;
   }
 }
 @media screen and (min-width: 1200px) {
   .subscribe__button {
     margin-left: 12px;
+    margin-top: 0;
   }
 }
 
@@ -223,7 +233,7 @@ body {
   display: flex;
   justify-content: flex-start;
   flex-wrap: wrap;
-  margin-bottom: 40px;
+  margin-bottom: 30px;
   gap: 8px;
 }
 @media screen and (min-width: 768px) {
@@ -233,7 +243,7 @@ body {
     margin-bottom: 30px;
   }
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1200px) {
   .filter {
     margin-bottom: 50px;
   }
@@ -558,12 +568,12 @@ body {
 .is-hidden {
   opacity: 0;
   pointer-events: none;
+  visibility: hidden;
 }
 
 .hero {
   background-color: #C4C4C4;
   padding: 118px 0;
-  height: 600px;
   max-width: 1600px;
   margin-left: auto;
   margin-right: auto;
@@ -669,11 +679,7 @@ body {
   font-size: 14px;
   line-height: 1.14;
   text-transform: uppercase;
-}
-@media screen and (min-width: 480px) {
-  .feauters__title {
-    text-align: center;
-  }
+  text-align: center;
 }
 @media screen and (min-width: 768px) {
   .feauters__title {
@@ -699,6 +705,21 @@ body {
 @media screen and (max-width: 1199px) {
   .direction {
     display: none;
+  }
+}
+
+.direction__title {
+  color: var(--title-text-color);
+  margin-bottom: 30px;
+  font-weight: 700;
+  font-size: 28px;
+  line-height: 1.17;
+  text-align: center;
+}
+@media screen and (min-width: 1200px) {
+  .direction__title {
+    margin-bottom: 50px;
+    font-size: 36px;
   }
 }
 
@@ -746,7 +767,6 @@ body {
   background-color: #F5F4FA;
 }
 
-.direction__title,
 .people__title,
 .client__title {
   color: var(--title-text-color);
@@ -939,10 +959,6 @@ body {
   font-style: normal;
 }
 
-.contacts__item {
-  gap: 9px;
-}
-
 .contacts__map {
   color: var(--primary-white-color);
   text-decoration: none;
@@ -952,6 +968,15 @@ body {
 }
 .contacts__map:hover, .contacts__map:focus {
   color: var(--accent-color);
+}
+
+.contacts__item {
+  margin-bottom: 8px;
+}
+@media screen and (min-width: 1200px) {
+  .contacts__item {
+    margin-bottom: 9px;
+  }
 }
 
 .contacts__link {
@@ -1030,7 +1055,7 @@ body {
 }
 
 .projects-item {
-  max-width: 370px;
+  width: 100%;
   border: 1px solid #EEEEEE;
   transition-property: box-shadow;
   transition-duration: 250ms;
@@ -1079,6 +1104,7 @@ body {
 
 .projects-img {
   display: block;
+  width: 100%;
 }
 
 .backdrop {
@@ -1148,6 +1174,7 @@ body {
   margin: 0px auto;
 }
 .form .button {
+  width: 100%;
   margin: 30px auto 0px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
@@ -1193,6 +1220,7 @@ body {
 }
 
 .form-input-area {
+  height: 40px;
   margin-bottom: 10px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
@@ -1280,6 +1308,11 @@ body {
   width: 14px;
   height: 14px;
 }
+@media screen and (min-width: 1200px) {
+  .checkbox-label {
+    margin-left: 10px;
+  }
+}
 
 .checkbox-text {
   display: block;
@@ -1289,7 +1322,9 @@ body {
 }
 @media screen and (min-width: 1200px) {
   .checkbox-text {
-    font-size: 11.5px;
+    font-size: 14px;
+    line-height: 1.71;
+    margin-left: 20px;
   }
 }
 
