--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -1,9 +1,16 @@
 .container {
     padding: 0 15px;
     margin: 0 auto;
-    width: 1200px;
+    width: 480px;
     max-width: 100%;
 
+    @include tablet{
+        width: 768px;
+
+    }
+    @include desktop{
+        width: 1200px;
+    }
 
     
  
