--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -31,7 +31,6 @@
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
 
-
     @include desktop {
         min-height: 581px;
         width: 528px;
@@ -82,6 +81,7 @@
     margin: 0px auto;
 
     & .button {
+            width: 100%;
             margin: 30px auto 0px;
             box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
         }
@@ -135,6 +135,7 @@
 }
 
 .form-input-area {
+    height: 40px;
     margin-bottom: 10px;
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
@@ -231,7 +232,6 @@
 .checkbox-label {
     display: flex;
     align-items: center;
-    // margin-left: 10px;
 
         &::after {
             content: "";
@@ -240,6 +240,9 @@
             height: 14px;
     
         }
+    @include desktop {
+    margin-left: 10px;
+    }
 }
 
 
@@ -250,8 +253,10 @@
     line-height: 1.16;
 
     @include desktop {
-        font-size: 13px
+        font-size: 14px;
         line-height: 1.71;
+        margin-left: 20px;
+        
     }
 
 
