--- a/sass/components/_subscrible-input.scss
+++ b/sass/components/_subscrible-input.scss
@@ -9,6 +9,7 @@
     @media screen and (min-width: 1200px) {
            flex-direction: row;
            align-items: flex-start;
+
         
         }
 
@@ -49,7 +50,6 @@
 
     @include tablet {
         max-width: 450px;
-        margin-bottom: 20px;
     
     }
 
@@ -70,11 +70,12 @@
     margin-top: 10px;
 
     @include tablet {
-        margin-top: 0px;
+        margin-top: 10px;
     }
    
     @include desktop {
         margin-left: 12px;
+        margin-top: 0;
     
         }
 }
